--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(RayTracer main.cpp
         vec3.h
         color.h
-        ray.h)
+        ray.h
+        hittable.h
+        sphere.h
+        hittable_list.h
+        mathutils.h
+        interval.h
+        camera.h
+)
